# asset_allocation_proj

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  diagnose_data.py  download_historical_data.py  main.py  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
config/: config.sample.yaml
docs/: new_strategies_summary.md  value_rebalancing_analysis.md
examples/: backtest_new_strategies.py  backtest_tqqq_infinite_buying.py  spy_value_rebalancing_analysis.py  tqqq_simple_analysis.py  tqqq_value_rebalancing_analysis.py  yearly_comparison_analysis.py
scripts/: diagnose_data.py  download_historical_data.py  update_expected_results.py
specs/001-backtesting-logic/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-account-integration/: analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-dynamic-allocation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/account/: __init__.py  auth.py  cli.py  client.py  config.py  crypto.py  exceptions.py  keygen.py  logging.py  models.py  rate_limiter.py  scheduler.py  service.py  token_cache.py
src/analysis/: __init__.py  data_downloader.py  value_rebalancing_simulator.py
src/backtesting/: __init__.py  engine.py  exceptions.py  metrics.py  price_window.py  rebalancer.py
src/data/: loaders.py  providers.py  validation.py
src/models/: __init__.py  backtest_config.py  calculated_weights.py  performance.py  portfolio_state.py  strategy.py  strategy_params.py  trade.py
(+59 files in other folders)
